Create Status badge component

--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "@material-ui/core": "4.12.3",
     "@material-ui/icons": "4.11.2",
     "express": "4.17.1",
     "react": "16.14.0",
@@ -84,6 +85,7 @@
     "html-webpack-plugin": "5.3.1",
     "jest": "27.0.4",
     "jest-express": "1.12.0",
+    "jest-styled-components": "7.0.5",
     "per-env": "1.0.2",
     "prettier": "2.3.1",
     "recharts": "2.1.4",
