--- a/package.json
+++ b/package.json
@@ -88,6 +88,7 @@
     "jest-styled-components": "7.0.5",
     "per-env": "1.0.2",
     "prettier": "2.3.1",
+    "react-data-table-component": "7.3.1",
     "recharts": "2.1.4",
     "ts-jest": "27.0.3",
     "ts-loader": "9.2.3",
