--- a/package.json
+++ b/package.json
@@ -53,6 +53,7 @@
     "@storybook/react": "6.2.9",
     "@testing-library/jest-dom": "5.14.1",
     "@testing-library/react": "11.2.7",
+    "@testing-library/react-hooks": "7.0.2",
     "@testing-library/user-event": "13.1.9",
     "@types/express": "4.17.12",
     "@types/jest": "26.0.23",
@@ -85,6 +86,7 @@
     "html-webpack-plugin": "5.3.1",
     "jest": "27.0.4",
     "jest-express": "1.12.0",
+    "jest-fetch-mock": "3.0.3",
     "jest-styled-components": "7.0.5",
     "moment": "2.29.1",
     "per-env": "1.0.2",
