--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
   "dependencies": {
     "@material-ui/core": "4.12.3",
     "@material-ui/icons": "4.11.2",
+    "dotenv": "8.6.0",
     "express": "4.17.1",
     "react": "16.14.0",
     "react-dom": "16.14.0",
