Refactor, improve code & docker conf

--- a/.env
+++ b/.env
@@ -1,1 +1,13 @@
+# In order to know if App is running in a docker container
+# or not we set a variable to false by default
+# and this variable will be set to true in docker-compose file
+
 DOCKER_RUNNING=false
+
+# Setting app port as variable
+# So it can be changed if needed
+PORT=4000
+
+# Setting storybook port as variable
+# So it can be changed if needed
+PORT_STORYBOOK=6006
