--- a/tsconfig.server.json
+++ b/tsconfig.server.json
@@ -2,7 +2,7 @@
   "compilerOptions": {
     "target": "es6",
     "module": "commonjs",
-    "outDir": "dist/server",
+    "outDir": "dist/",
     "rootDir": "./",
     "strict": true,
     "esModuleInterop": true,
